feat: add html formatting to comments
- add formatting toolbar
- insert bold, italic, code, link tags
- server-side tag validation
- basic tag display

TODO: proper html rendering

--- a/static/home.html
+++ b/static/home.html
@@ -46,6 +46,12 @@
 
       <div class="form-group">
         <label for="commentText">Комментарий</label>
+        <div class="html-toolbar">
+          <button type="button" class="html-btn" data-tag="strong" title="Жирный текст">[b]</button>
+          <button type="button" class="html-btn" data-tag="i" title="Курсив">[i]</button>
+          <button type="button" class="html-btn" data-tag="code" title="Код">[code]</button>
+          <button type="button" class="html-btn" data-tag="a" title="Ссылка">[url]</button>
+        </div>
         <textarea id="commentText" placeholder="Ваш комментарий"></textarea>
         <span id="commentTextError" class="field-error"></span>
       </div>
