feat: add file upload functionality and HTML tags support
• Implement image and text file upload with validation
• Add image resizing to 320x240 pixels
• Create HTML toolbar with tag buttons ([b], [i], [code], [url])
• Add safe HTML rendering in comments
• Setup static files serving for uploads
• Fix form data handling and validation

File uploads:
- Support JPG, PNG, GIF images (auto-resized)
- Support TXT files (max 100KB)
- Display image previews and file links
- Secure file type validation

HTML features:
- Allow only <a>, <code>, <i>, <strong> tags
- XHTML validation with proper tag closing
- Safe rendering with escaped content

Ready for production use

--- a/static/home.html
+++ b/static/home.html
@@ -45,6 +45,19 @@
       </div>
 
       <div class="form-group">
+        <label for="imageUpload">Изображение (JPG, PNG, GIF, до 2MB)</label>
+        <input type="file" id="imageUpload" accept=".jpg,.jpeg,.png,.gif">
+        <div class="field-hint">Будет уменьшено до 320x240 пикселей</div>
+        <span id="imageUploadError" class="field-error"></span>
+      </div>
+
+      <div class="form-group">
+          <label for="textFileUpload">Текстовый файл (TXT, до 100KB)</label>
+          <input type="file" id="textFileUpload" accept=".txt">
+          <span id="textFileUploadError" class="field-error"></span>
+      </div>
+
+      <div class="form-group">
         <label for="commentText">Комментарий</label>
         <div class="html-toolbar">
           <button type="button" class="html-btn" data-tag="strong" title="Жирный текст">[b]</button>
