feat: add CAPTCHA protection with image generation
• Implement CAPTCHA image generation with random text
• Add CAPTCHA validation on comment submission
• Create captcha refresh functionality
• Update form UI with captcha image and refresh button
• Add client-side captcha field handling

Security:
- Generate random 6-character captcha (letters + digits)
- Validate captcha on server before comment creation
- Prevent form autofill issues

Note: Uses temporary in-memory storage.
Redis integration needed for production.

--- a/static/home.html
+++ b/static/home.html
@@ -39,7 +39,11 @@
       </div>
 
       <div class="form-group">
-        <label for="captcha">Введите капчу: <strong>12345</strong></label>
+        <label for="captcha">Введите капчу:</label>
+        <div class="captcha-container">
+          <img id="captchaImage" src="/captcha" alt="CAPTCHA">
+          <button type="button" id="refreshCaptcha">🔄</button>
+        </div>
         <input type="text" id="captcha" placeholder="Введите капчу">
         <span id="captchaError" class="field-error"></span>
       </div>
