--- a/static/home.html
+++ b/static/home.html
@@ -41,7 +41,7 @@
       <div class="form-group">
         <label for="captcha">Введите капчу:</label>
         <div class="captcha-container">
-          <img id="captchaImage" src="/captcha" alt="CAPTCHA">
+          <img id="captchaImage" src="/captcha/" alt="CAPTCHA">
           <button type="button" id="refreshCaptcha">🔄</button>
         </div>
         <input type="text" id="captcha" placeholder="Введите капчу">
